# auth

./: Cargo.toml  LICENSE  Makefile  docker-compose.yaml
.cargo/: config.toml
docker/: docker-compose.yaml
migration/src/: lib.rs  m20230817_195910_user_table.rs
src/: main.rs
src/app/: app.rs  database.rs  mod.rs
src/app/config/: env.rs  mod.rs  server.rs
src/app/database/: database.rs
src/service/: mod.rs
src/service/config/: env.rs  error.rs
src/service/models/: response.rs
src/service/routes/: controller.rs  mod.rs  routes.rs  routing.rs
src/service/utils/: response.rs
src/utils/: response.rs
