[package]
name = "archipel-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
thiserror = "1"

serde = { version = "1.0.183", features = ["derive"] }

pretty_env_logger = "0"
log = { version = "0", features = [
    "max_level_trace",
    "release_max_level_warn",
] }
